@@ -18,6 +18,8 @@ package org.operaton.bpm.engine.impl.cmd;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Stream;
 
 import org.jspecify.annotations.NullMarked;
 import org.jspecify.annotations.Nullable;
@@ -27,6 +29,8 @@ import org.operaton.bpm.engine.externaltask.UpdateExternalTaskRetriesBuilder;
 import org.operaton.bpm.engine.history.HistoricProcessInstanceQuery;
 import org.operaton.bpm.engine.impl.interceptor.CommandExecutor;
 import org.operaton.bpm.engine.runtime.ProcessInstanceQuery;
+
+import static java.util.Objects.requireNonNull;
 
 /**
  * @author smirnov
@@ -55,35 +59,41 @@ public @NullMarked class UpdateExternalTaskRetriesBuilderImpl implements UpdateE
   }
 
   @Override
-  public UpdateExternalTaskRetriesBuilder externalTaskIds(List<String> externalTaskIds) {
-    this.externalTaskIds = externalTaskIds;
-    return this;
-  }
-
-  @Override
-  public UpdateExternalTaskRetriesBuilder externalTaskIds(String @Nullable... externalTaskIds) {
+  public UpdateExternalTaskRetriesBuilder externalTaskIds(@Nullable List<@Nullable String> externalTaskIds) {
     if (externalTaskIds == null) {
       this.externalTaskIds = Collections.emptyList();
-    }
-    else {
-      this.externalTaskIds = List.of(externalTaskIds);
+    } else {
+      this.externalTaskIds = externalTaskIds.stream().filter(Objects::nonNull).toList();
     }
     return this;
   }
 
   @Override
-  public UpdateExternalTaskRetriesBuilder processInstanceIds(List<String> processInstanceIds) {
-    this.processInstanceIds = processInstanceIds;
+  public UpdateExternalTaskRetriesBuilder externalTaskIds(@Nullable String @Nullable... externalTaskIds) {
+    if (externalTaskIds == null) {
+      this.externalTaskIds = Collections.emptyList();
+    } else {
+      this.externalTaskIds = Stream.of(externalTaskIds).filter(Objects::nonNull).toList();
+    }
     return this;
   }
 
   @Override
-  public UpdateExternalTaskRetriesBuilder processInstanceIds(String @Nullable... processInstanceIds) {
+  public UpdateExternalTaskRetriesBuilder processInstanceIds(@Nullable List<@Nullable String> processInstanceIds) {
     if (processInstanceIds == null) {
       this.processInstanceIds = Collections.emptyList();
+    } else {
+      this.processInstanceIds = processInstanceIds.stream().filter(Objects::nonNull).toList();
     }
-    else {
-      this.processInstanceIds = List.of(processInstanceIds);
+    return this;
+  }
+
+  @Override
+  public UpdateExternalTaskRetriesBuilder processInstanceIds(@Nullable String @Nullable... processInstanceIds) {
+    if (processInstanceIds == null) {
+      this.processInstanceIds = Collections.emptyList();
+    } else {
+      this.processInstanceIds = Stream.of(processInstanceIds).filter(Objects::nonNull).toList();
     }
     return this;
   }
@@ -109,13 +119,15 @@ public @NullMarked class UpdateExternalTaskRetriesBuilderImpl implements UpdateE
   @Override
   public void set(int retries) {
     this.retries = retries;
-    commandExecutor.execute(new SetExternalTasksRetriesCmd(this));
+    requireNonNull(commandExecutor)
+            .execute(new SetExternalTasksRetriesCmd(this));
   }
 
   @Override
   public Batch setAsync(int retries) {
     this.retries = retries;
-    return commandExecutor.execute(new SetExternalTasksRetriesBatchCmd(this));
+    return requireNonNull(commandExecutor)
+            .execute(new SetExternalTasksRetriesBatchCmd(this));
   }
 
   public int getRetries() {
